# zxing-cpp

./: .appveyor.yml  .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AUTHORS.ZXing  CMakeLists.txt  Commercial Support.md  FetchSTB.cmake  LGPL_EXCEPTION.Qt  LICENSE.Qt  NOTICE  NewClass.py  Package.swift  README.md  compressed_base64.txt  compressed_base64_zstd.txt  compressed_z85_padded.txt  zxing-cpp.podspec  zxing.cmake  zxing.pc.in
core/: Android.mk  CMakeLists.txt  Version.h.in  ZXVersion.h.in  ZXingConfig.cmake.in  include.pri  version.rc.in  zxing.pc.in
core/include/ZXing/: Barcode.h  BitArray.h  BitHacks.h  BitMatrix.h  ByteArray.h  CharacterSet.h  DecodeHints.h  Error.h  GTIN.h  ImageView.h  Matrix.h  Point.h  Quadrilateral.h  ReadBarcode.h  Result.h  TextUtfEncoding.h  WriteBarcode.h  ZXVersion.h  ZXingC.h  ZXingCpp.h
core/src/: Barcode.cpp  Barcode.h  BarcodeData.h  BarcodeFormat.cpp  BarcodeFormat.h  Binarizer.cpp  Binarizer.h  BinaryBitmap.cpp  BinaryBitmap.h  BitArray.cpp  BitArray.h  BitHacks.h  BitMatrix.cpp  BitMatrix.h  BitMatrixCursor.h  BitMatrixIO.cpp  BitMatrixIO.h  BitSource.cpp  BitSource.h  BitWrapperBinarizer.cpp  BitWrapperBinarizer.h  ByteArray.h  ByteMatrix.h  CharacterSet.cpp  CharacterSet.h  CharacterSetECI.cpp  CharacterSetECI.h  ConcentricFinder.cpp  ConcentricFinder.h  Content.cpp  Content.h  ContentType.h  CreateBarcode.cpp  CreateBarcode.h  CustomData.h  DecodeHints.cpp  DecodeHints.h  DecodeStatus.cpp  DecodeStatus.h  DecoderResult.h  (+115 more)
core/src/aztec/: AZDecoder.cpp  AZDecoder.h  AZDetector.cpp  AZDetector.h  AZDetectorResult.h  AZEncoder.cpp  AZEncoder.h  AZEncodingState.h  AZHighLevelEncoder.cpp  AZHighLevelEncoder.h  AZReader.cpp  AZReader.h  AZToken.cpp  AZToken.h  AZWriter.cpp  AZWriter.h
core/src/datamatrix/: DMBitLayout.cpp  DMBitLayout.h  DMBitMatrixParser.cpp  DMBitMatrixParser.h  DMDataBlock.cpp  DMDataBlock.h  DMDecoder.cpp  DMDecoder.h  DMDefaultPlacement.cpp  DMDefaultPlacement.h  DMDetector.cpp  DMDetector.h  DMECB.h  DMECEncoder.cpp  DMECEncoder.h  DMEncoderContext.h  DMHighLevelEncoder.cpp  DMHighLevelEncoder.h  DMReader.cpp  DMReader.h  DMSymbolInfo.cpp  DMSymbolInfo.h  DMSymbolShape.h  DMVersion.cpp  DMVersion.h  DMWriter.cpp  DMWriter.h
core/src/librscpp/: README.md  decode.h  encode.h  field.h  poly.h
core/src/libzint/: 2of5.c  2of5inter.c  2of5inter_based.c  aztec.c  aztec.h  big5.h  channel_precalcs.h  codabar.c  code.c  code128.c  code128.h  common.c  common.h  dmatrix.c  dmatrix.h  dmatrix_trace.h  dxfilmedge.c  eci.c  eci.h  eci_sb.h  filemem.c  filemem.h  gb18030.h  gb2312.h  gbk.h  general_field.c  general_field.h  gs1.c  gs1.h  gs1_lint.h  iso3166.h  iso4217.h  ksx1001.h  large.c  large.h  library.c  maxicode.c  maxicode.h  medical.c  output.c  (+23 more)
core/src/libzueci/: README.md  zueci.c  zueci.h  zueci_big5.h  zueci_common.h  zueci_gb18030.h  zueci_gb2312.h  zueci_gbk.h  zueci_ksx1001.h  zueci_sb.h  zueci_sjis.h
core/src/maxicode/: MCBitMatrixParser.cpp  MCBitMatrixParser.h  MCDecoder.cpp  MCDecoder.h  MCReader.cpp  MCReader.h
core/src/microqrcode/: MQRCornerFinder.cpp  MQRCornerFinder.h  MQRDetector.cpp  MQRDetector.h  MQRDimension.cpp  MQRDimension.h  MQRFakeCenterCalculator.cpp  MQRFakeCenterCalculator.h  (+8 more)
docs/: CMakeLists.txt  Doxyfile.in
example/: CMakeLists.txt  ZXingBarcodeFormat.cpp  ZXingOpenCV.cpp  ZXingOpenCV.h  ZXingQt5CamReader.qml  ZXingQt6CamReader.qml  ZXingQtCamReader.cpp  ZXingQtCamReader.qml  ZXingQtCamReader.qrc  ZXingQtQmlWriter.cpp  ZXingQtQmlWriter.h  ZXingQtQmlWriter.qml  ZXingQtQmlWriter.qrc  ZXingQtQmlWriterMain.cpp  ZXingQtReader.cpp  ZXingQtReader.h  ZXingQtWriter.cpp  ZXingReader.cpp  ZXingWriter.cpp  generate_image.cpp  generate_png.cpp  lodepng.cpp  parse_png.cpp  scan_image.cpp  scan_png.cpp
test/blackbox/: BlackboxTestRunner.cpp  BlackboxTestRunner.h  CMakeLists.txt  ImageLoader.cpp  ImageLoader.h  Pdf417MultipleCodeReader.cpp  Pdf417MultipleCodeReader.h  QRCodeStructuredAppendReader.cpp  QRCodeStructuredAppendReader.h  TestReaderMain.cpp  TestWriterMain.cpp  ZXFilesystem.h
test/fuzz/: CMakeLists.txt  fuzzAZDecoder.cpp  fuzzDBEDecoder.cpp  fuzzDMDecoder.cpp  fuzzDMEncoder.cpp  fuzzDecodeMatrix.cpp  fuzzODDecoders.cpp  fuzzQRDecoder.cpp  fuzzReadLinear.cpp  fuzzReadMatrix.cpp
test/unit/: BarcodeFormatTest.cpp  BitArrayUtility.cpp  BitArrayUtility.h  BitHacksTest.cpp  BitMatrixUtility.cpp  BitMatrixUtility.h  ByteMatrixUtility.cpp  ByteMatrixUtility.h  CMakeLists.txt  CMakeLists.txt.in  CharacterSetECITest.cpp  ContentTest.cpp  CreateBarcodeTest.cpp  ErrorTest.cpp  GS1Test.cpp  GTINTest.cpp  JSONTest.cpp  PatternTest.cpp  PseudoRandom.h  ReedSolomonTest.cpp  SanitizerSupport.cpp  TextDecoderTest.cpp  TextEncoderTest.cpp  TextUtfEncodingTest.cpp  ThresholdBinarizerTest.cpp  WriteBarcodeTest.cpp  ZXAlgorithmsTest.cpp
wrappers/gdiplus/: BarcodeGenerator.cpp  BarcodeGenerator.h  BarcodeReader.cpp  BarcodeReader.h  BarcodeScanner.cpp  BarcodeScanner.h  BitmapLuminanceSource.h  CMakeLists.txt  GdiplusInit.cpp  GdiplusInit.h  ImageReader.cpp  ImageReader.h  ImageWriter.cpp  ImageWriter.h  win_iconv.c
wrappers/python/: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  demo_read_show.py  demo_reader.py  demo_writer.py  init.py  pre-build-manylinux.sh  pyproject.toml  setup.py  test.py  zint  zxing.cmake  zxing.cpp  zxingcpp.pyi
wrappers/qt/: CMakeLists.txt  README.md  ZXingQml5Reader.qml  ZXingQml6Reader.qml  ZXingQmlReader-Info.plist  ZXingQmlReader.cpp  ZXingQmlReader.qrc  ZXingQt.h  ZXingQtCamReader.cpp  ZXingQtReader.cpp  ZXingQtWriter.cpp
wrappers/rust/: .gitignore  Cargo.toml  README.md  build.rs  core  rustfmt.toml  test.txt
wrappers/wasm/: BarcodeReader.cpp  BarcodeWriter.cpp  CMakeLists.txt  README.md  Toolchain-Emscripten.cmake  base64ArrayBuffer.js  build.sh  demo_cam_reader.html  demo_reader.html  demo_writer.html  zxing.html
wrappers/winrt/: BarcodeReader.cpp  BarcodeReader.h  BuildWinCom.bat  CMakeLists.txt  README.md  ReadResult.h  TargetArch.cmake  Toolchain-Win10.cmake
(+2094 files in other folders)
